kubernetes/lab/05-ingress/ingress-multi.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: api.brainupgrade.in
  namespace: api
spec:
  rules:
  - host: api.brainupgrade.in
    http:
      paths:
      - backend:
          service:
            name: api-v2
            port:
              number: 80
        path: /?(.*)
        pathType: ImplementationSpecific
      - backend:
          service:
            name: api-v1
            port:
              number: 80
        path: /v1/?(.*)
        pathType: ImplementationSpecific
      - backend:
          service:
            name: sms
            port:
              number: 80
        path: /sms/?(.*)
        pathType: ImplementationSpecific
      - backend:
          service:
            name: mms
            port:
              number: 80
        path: /mms/?(.*)
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - api.brainupgrade.in
    secretName: api.brainupgrade.in
